<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    android:gravity="center"
    tools:context="com.example.MyHomework4.ThirdFragment"
    tools:background="#efb">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:text="@string/thirdFragment"
        android:textColor="@color/white"
        android:textSize="18dp"
        tools:background="#fbe"/>

    <Button
        android:id="@+id/returnTosecondFragmentButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/returnToSecondFragmentButton"/>

    <Button
        android:id="@+id/returnToFirstFragmentButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/returnToFirstFragmentButton"/>

</LinearLayout>